--- a/src/renderer/src/Components/SideBarButton/sidebarbutton.css
+++ b/src/renderer/src/Components/SideBarButton/sidebarbutton.css
@@ -5,12 +5,16 @@
     margin-top: 2px;
     user-select: none;
 }
-.sidebarbutton {
+
+.sidebarA {
     height: 50px;
     overflow: hidden;
     display: flex;
     align-items: center;
+    color: black;
+    text-decoration: none;
 }
+
 .buttonText {
     margin-left: 20px;
     font-size: 1.5rem;
