--- a/src/renderer/src/Components/Pages/JungleToolPage/jungletoolpage.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/jungletoolpage.css
@@ -1,9 +1,42 @@
 .jungletoolpagecontainer {
     display: grid;
-    grid-template-columns: 0.5fr repeat(2, 1fr) 0.5fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-columns: 0.5fr 1fr 0.8fr 0.8fr auto;
+    grid-template-rows: auto 1fr 0.5fr auto;
     grid-row-gap: 20px;
     grid-column-gap: 20px;
     width: 100%;
     background-color: #0f0f11d7;
+}
+
+.titleholder > h1{
+    grid-row: 1;
+    grid-column: 2 / span 2;
+    text-align: right !important;
+    margin-right: 30%;
+}
+
+
+.mapcontainer {
+    background-color: blueviolet;
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.expdisplaycontainer {
+    background-color: coral;
+    grid-row: 2;
+    grid-column: 3;
+}
+
+.champselectcontainer {
+    background-color: crimson;
+    grid-row: 3;
+    grid-column: 4;
+    height: 30%;
+}
+
+.valuesdisplaycontainer {
+    background-color: darkmagenta;
+    grid-row: 2;
+    grid-column: 4;
 }
