--- a/src/renderer/src/Components/Pages/JungleToolPage/Button/button.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/Button/button.css
@@ -1,6 +1,6 @@
 .sideB {
-    width: 100%;
-    height: 5%;
+    width: 10%;
+    height: 100%;
     background-color: #1a1a1f;
     border: none;
     position: relative;
@@ -8,6 +8,7 @@
     font-weight: bold;
     font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
+    color: white;
 }
 .sideB:hover {
     background-color: rgba(255, 255, 255, 0.05) !important;
