--- a/src/renderer/src/Components/Pages/JungleToolPage/Copied/copied.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/Copied/copied.css
@@ -4,10 +4,13 @@
     width: 10%;
     border: 1px solid white;
     z-index: 200;
-    left: 4.5%; 
-    top: -200%;
+    right: 0%; 
+    bottom: -200%;
     transition: all 0.3s ease-in-out;
+    color: white;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    text-align: center;
 }
 .copied[data-isdisplayed="true"] {
-    top: 10%;
+    bottom: 8%;
 }
