--- a/src/renderer/src/Components/ElectronSideBar/electronsidebar.css
+++ b/src/renderer/src/Components/ElectronSideBar/electronsidebar.css
@@ -1,5 +1,5 @@
 .elesidebar {
-    background-color: rgb(67, 153, 153);
+    background-color: #1a1a1f;
     width: 4%;
     height: 100vh;
     z-index: 5001;
