--- a/src/renderer/src/Components/Pages/JungleToolPage/RouteSearch/routesearch.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/RouteSearch/routesearch.css
@@ -61,7 +61,7 @@
 .namerouteinput {
     height: 20%;
     left: 50%;
-    top: 50%;
+    top: 45%;
     transform: translate(-50%, -50%);
 }
 
@@ -97,23 +97,27 @@
 
 .popupP {
     position: absolute;
-    top: 20%;
+    top: 17%;
     left: 44%;
     transform: translateX(-40%);
     font-size: 1.5rem;
     user-select: none;
 }
 
-.justtesttodisplay {
-    	color: white;
-        position: absolute;
-        top: -600%;
-}
+.errormessage {
+    color: rgb(192, 60, 60);
+    font-size: 0.8rem;
+    position: absolute;
+    bottom: 33%;
+    left: 10%;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    display: none;
+  }
 
 /* May need to change this for 1920 */
 .nameOfCurrentlySelected {
     position: absolute;
-    left: -93%;
+    left: -100%;
     top: -100%;
     font-size: 1.5rem;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
