--- a/src/renderer/src/Components/Pages/HomePage/homepage.css
+++ b/src/renderer/src/Components/Pages/HomePage/homepage.css
@@ -5,18 +5,22 @@
     grid-row-gap: 20px;
     grid-column-gap: 20px;
     width: 100%;
+    background-color: #0f0f11d7;
 }
 
 .titleholder {
     grid-row: 1;
     grid-column: 2 / span 2;
     margin-top: 1%;
+    color: white;
 }
 
 .about {
     grid-row: 2;
     grid-column: 2 / span 2;
-    background-color: cadetblue;
+    color: white;
+    background-color: rgba(39, 39, 46);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.2), 0 8px 16px rgba(0,0,0,0.2);
 }
 
 .toollinks {
@@ -40,4 +44,16 @@
     margin-right: 1%;
     margin-top: 1%;
     margin-bottom: 1%;
+  }
+
+  #abouth1 {
+    text-align: center;
+    color: gold;
+    font-size: 2rem;
+  }
+
+  .aboutP {
+    font-size: 1.5rem;
+    margin-bottom: 1em;
+    margin-left: 1rem;
   }
