--- a/src/renderer/src/Components/Pages/LobbyPage/ChampionSplash/championsplash.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/ChampionSplash/championsplash.css
@@ -19,9 +19,13 @@
     width: 100%;
     bottom: 0;
     height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .champname {
     text-align: center;
     color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
