--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Rowdies-Regular';
+    src: url('../../../../assets/font/Rowdies-Regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+ }
+
 .lobbypagecontainer {
     display: grid;
     grid-template-columns: 0.6fr 1fr 1fr 0.5fr 1fr   auto;
