--- a/src/renderer/src/Components/Pages/LobbyPage/ChampionSplash/championsplash.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/ChampionSplash/championsplash.css
@@ -1,9 +1,9 @@
 .playerchamp {
     height: 50%;
-    background-color: beige;
+    background-color: rgba(37, 37, 30, 0.356);
     width: calc(20% - 4px);
     /* subtract 2px for the border */
-    border: 2px solid black;
+    border: 2px solid rgba(24, 21, 21, 0.856);
     position: relative;
 }
 
@@ -20,12 +20,26 @@
     bottom: 0;
     height: 20%;
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
 .champname {
+    margin-top: 7%;
     text-align: center;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.summonerOne, .summonerTwo {
+    position: absolute;
+    width: 20%;
+    height: 45%;
+    bottom: 0;
+}
+
+  .summonerOne {
+    right: 20%;
+  }
+  .summonerTwo {
+    right: 0;
+  }
