--- a/src/renderer/src/Components/Pages/SettingsPage/settingspage.css
+++ b/src/renderer/src/Components/Pages/SettingsPage/settingspage.css
@@ -1,6 +1,7 @@
 .settingspagecontainer {
     display: grid;
     grid-template-columns: 0.5fr repeat(2, 1fr) 0.5fr;
+    background-color: #0f0f11d7;
     grid-template-rows: auto 1fr auto;
     grid-row-gap: 20px;
     grid-column-gap: 20px;
@@ -14,17 +15,21 @@
 }
 
 .settings {
-    background-color: rgba(255, 0, 234, 0.295);
     grid-row: 2;
     grid-column: 2 / span 2;
     display: flex;
     flex-direction: row;
-    gap: 1%;
+    gap: 0.5%;
     font-size: 1.5rem;
     justify-content: flex-start;
     /* Align flex items to the start */
     row-gap: 1%;
     position: relative;
+}
+
+.settings > div {
+    background-color: rgba(39, 39, 46);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.2), 0 8px 16px rgba(0,0,0,0.2);
 }
 
 .windowsize,
@@ -38,11 +43,9 @@
 }
 
 .windowsize {
-    background-color: brown;
 }
 
 .othersetting {
-    background-color: blue;
 }
 
 .windowsize {
@@ -51,7 +54,6 @@
 }
 
 .radioinputres {
-    background-color: blueviolet;
     margin-top: 20px;
     display: flex;
     gap: 5%;
