--- a/src/renderer/src/Components/Pages/SettingsPage/settingspage.css
+++ b/src/renderer/src/Components/Pages/SettingsPage/settingspage.css
@@ -6,6 +6,7 @@
     grid-row-gap: 20px;
     grid-column-gap: 20px;
     width: 100%;
+    color: white;
 }
 
 .titleholder {
@@ -56,6 +57,9 @@
 .radioinputres {
     margin-top: 20px;
     display: flex;
+    background-color: blue;
+    width: 50%;
+    margin: 5% auto;
     gap: 5%;
     justify-content: center;
 }
@@ -75,4 +79,9 @@
   
   #oksetting:hover {
     background-color: green;
+    cursor: pointer;
+  }
+
+  .resses {
+    list-style: none;
   }
