--- a/src/renderer/src/Components/Pages/SettingsPage/settingspage.css
+++ b/src/renderer/src/Components/Pages/SettingsPage/settingspage.css
@@ -85,7 +85,7 @@
     transform: translateX(-50%);
     width: 150px;
     height: 50px;
-    bordeR: none;
+    border: none;
     background-color: blue;
     color: white;
     font-size: 1.5rem;
