--- a/src/renderer/src/Components/Pages/JungleToolPage/RouteSearch/routesearch.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/RouteSearch/routesearch.css
@@ -114,15 +114,6 @@
     display: none;
   }
 
-/* May need to change this for 1920 */
-.nameOfCurrentlySelected {
-    position: absolute;
-    left: -100%;
-    top: -100%;
-    font-size: 1.5rem;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-}
-
 .routeoptions {
     position: absolute;
     width: 100%;
@@ -170,6 +161,47 @@
     justify-content: center;
     flex: 1;
 }
+
+.routenameanddelete {
+    width: 31.95%;
+    position: fixed;
+    right: 51.56%;
+    top: 76.3%;
+    height: 5%;
+    background-color: rgba(39, 39, 46, 0.76);
+}
+
+/* May need to change this for 1920 */
+.nameOfCurrentlySelected {
+    text-align: center;
+    font-size: 1.5rem;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.deleteRoute {
+    position: absolute;
+    background-color: rgba(161, 41, 41, 0.438);
+    border: none;
+    font-weight: bold;
+    height: auto;
+    width: auto;
+    top: 60%;
+    left: 90%;
+    padding: 1%;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    color: white;
+    font-size: 1rem;
+}
+.deleteRoute:hover {
+    background-color: rgba(161, 41, 41, 0.7);
+}
+
+@media screen and (min-width: 1900px) {
+    .routenameanddelete {
+        top: 75%;
+    }
+} 
 
 .routeli:nth-child(1) {
     border-top: 1px solid white;
