--- a/src/renderer/src/Components/Pages/JungleToolPage/RouteSearch/routesearch.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/RouteSearch/routesearch.css
@@ -167,7 +167,7 @@
     position: fixed;
     right: 51.56%;
     top: 76.3%;
-    height: 5%;
+    height: 7%;
     background-color: rgba(39, 39, 46, 0.76);
 }
 
@@ -197,9 +197,54 @@
     background-color: rgba(161, 41, 41, 0.7);
 }
 
+.buttoncontainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
+}
+
+.confirmbutton {
+    width: 25%;
+    text-align: center;
+    font-size: 1.5rem;   
+    margin-top: 3%; 
+    cursor: pointer;
+    border: none;
+    font-weight: bold;
+    color: white;
+}
+
+#yesdelete {
+    background-color: rgb(15, 105, 27);
+}
+#yesdelete:hover {
+    background-color: rgb(15, 105, 27, 0.8);
+}
+#nodelete {
+    background-color: rgba(161, 41, 41, 0.438);
+}
+#nodelete:hover {
+    background-color: rgba(161, 41, 41, 0.7);
+}
+
+.confirmDeletion {
+    background-color: rgb(35, 35, 41);
+    box-shadow: 0 4px 8px rgb(0 0 0 / 20%), 0 8px 8px rgb(0 0 0 / 20%), 0 10px 20px rgb(0 0 0 / 20%);
+    width: 50%;
+    font-size: 0.8rem;
+    color: red;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    height: 100%;
+    position: absolute;
+    top: 90%;
+    right: 0;
+}
+
 @media screen and (min-width: 1900px) {
     .routenameanddelete {
         top: 75%;
+        height: 5%;
     }
 } 
 
