--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -40,9 +40,10 @@
 }
 
 .routeselector {
+    position: relative;
     grid-column: 3;
     grid-row: 5;
-    background-color: brown;
+    background-color: rgba(39, 39, 46, 0.76);
 }
 
 .camporder {
@@ -55,4 +56,18 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.saveButton {
+    position: fixed;
+    top: 94.7%;
+    left: 55%;
+    height: 4.2%;
+    width: 3%;
+    font-weight: bold;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    background-color: rgb(15, 105, 27);
+    border: none;
+    cursor: pointer;
+    color: white;
 }
