--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -44,12 +44,15 @@
     grid-column: 3;
     grid-row: 5;
     background-color: rgba(39, 39, 46, 0.76);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.2), 0 8px 16px rgba(0,0,0,0.2);
 }
 
 .camporder {
+    position: relative;
     grid-column: 4 / span 2;
     grid-row: 4 / span 2;
-    background-color: aquamarine;
+    background-color: rgba(39, 39, 46, 0.76);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.2), 0 8px 16px rgba(0,0,0,0.2);
 }
 
 .champSplashArt {
