--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -27,7 +27,8 @@
 }
 
 .statistics {
-    background-color: rgb(59, 59, 23);
+    background-color: rgba(39, 39, 46);
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.2), 0 8px 16px rgba(0,0,0,0.2);
     grid-column: 2;
     grid-row: 5;
 }
@@ -86,4 +87,19 @@
     font-weight: bold;
     background-color: rgb(15, 105, 27);
     color: white;
+}
+
+.gamestarting {
+    height: 1.5rem;
+    margin-top: 2%;
+    font-size: 1.5rem;
+    text-align: center;
+    color: white;
+}
+
+.totalwr {
+    margin-top: 3%;
+    height: 1rem;
+    font-size: 1rem;
+    padding-left: 10%;
 }
