--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -101,7 +101,6 @@
 .totalwr {
     margin-top: 3%;
     height: 1rem;
-    font-size: 1rem;
 }
 .overall {
     margin-left: 4%;
@@ -117,7 +116,17 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
+    width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+    margin-top: 4%;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.overalldiv > p {
+    margin-left: 2%;
+    display: inline;
 }
 
 .championSpec {
