--- a/src/renderer/src/Components/Pages/LobbyPage/PlayerFrame/playerframe.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/PlayerFrame/playerframe.css
@@ -12,16 +12,6 @@
     margin-top: 1%;
 }
 
-.champImgContainer {
-    position: absolute;
-    background-color: aqua;
-    width: 15%;
-    height: 60%;
-    top: 30%;
-    left: 5%;
-    border-radius: 50%;
-}
-
 .kda {
     color: white;
     position: absolute;
@@ -32,21 +22,21 @@
 .summonerspellcontainer {
     position: absolute;
     left: 23%;
-    top: 33%;
+    bottom: 40%;
     width: 8%;
-    height: 60%;
+    height: 30%;
     display: flex;
     flex-direction: column;
-    gap: 2%;
+    gap: 3%;
 }
 
 .itemcontainer {
     background-color: azure;
-    width: 35%;
+    width: 25%;
     height: 60%;
     position: absolute;
-    right: 1%;
-    bottom: 2%;
+    right: 13%;
+    bottom: 5%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -63,4 +53,38 @@
     bottom: 10%;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.trinket {
+    background-color: azure;
+    width: 8%;
+    height: 30%;
+    position: absolute;
+    right: 2%;
+    bottom: 5%;
+    border-radius: 50%;
+}
+
+.trinketimg {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.playerFrameChampion {
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.champImgContainer {
+    position: absolute;
+    width: 15%;
+    height: 60%;
+    top: 30%;
+    left: 5%;
+    border-radius: 50%;
+    border: 1px solid gold;
 }
