--- a/src/renderer/src/Components/Pages/LobbyPage/PlayerFrame/playerframe.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/PlayerFrame/playerframe.css
@@ -33,9 +33,9 @@
 .itemcontainer {
     background-color: azure;
     width: 25%;
-    height: 60%;
+    height: 65%;
     position: absolute;
-    right: 13%;
+    right: 12%;
     bottom: 5%;
     display: flex;
     flex-direction: column;
@@ -70,6 +70,7 @@
     height: 100%;
     border-radius: 50%;
     object-fit: cover;
+    border: 1px solid gold;
 }
 
 .playerFrameChampion {
@@ -87,4 +88,21 @@
     left: 5%;
     border-radius: 50%;
     border: 1px solid gold;
+}
+
+.levelcontainer {
+    background-color: purple;
+    width: 45%;
+    height: 45%;
+    position: absolute;
+    top: 60%;
+    left: 60%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.level {
+    text-align: center;
 }
