--- a/src/renderer/src/Components/Pages/LobbyPage/PlayerFrame/playerframe.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/PlayerFrame/playerframe.css
@@ -1,5 +1,5 @@
 .playercontainer {
-    background-color: black;
+    background-color: rgb(17, 19, 54);
     width: 100%;
     height: 20%;
     border: 1px solid white;
@@ -15,7 +15,7 @@
 .kda {
     color: white;
     position: absolute;
-    top: 50%;
+    top: 57%;
     transform: translate(-50%, -50%);
     left: 48%;
 }
@@ -85,8 +85,8 @@
 .champImgContainer {
     position: absolute;
     width: 15%;
-    height: 60%;
-    top: 30%;
+    height: 50%;
+    top: 40%;
     left: 5%;
     border-radius: 50%;
     border: 1px solid gold;
