--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -24,6 +24,7 @@
     margin-bottom: 1%;
     background-color: rgba(39, 39, 46);
     box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.2), 0 8px 16px rgba(0,0,0,0.2);
+    gap: 0;
 }
 
 .statistics {
@@ -154,4 +155,19 @@
     width: 10%;
     height: 10%;
     margin-bottom: 0.5%;
+}
+
+.gameinfo {
+    width: 100%;
+    height: 7%;
+    margin-bottom: 0;
+    padding-top: 1%;
+    background-color: rgb(26, 26, 31);
+}
+
+.winLose {
+    text-align: center;
+    font-size: 1.5rem;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 0.1rem;
 }
