--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -161,8 +161,11 @@
     width: 100%;
     height: 7%;
     margin-bottom: 0;
-    padding-top: 1%;
     background-color: rgb(26, 26, 31);
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 32.5%;
 }
 
 .winLose {
@@ -170,4 +173,11 @@
     font-size: 1.5rem;
     font-family:Georgia, 'Times New Roman', Times, serif;
     letter-spacing: 0.1rem;
+}
+.time {
+    color: white;
+    text-align: left;
+    display: inline;
+    font-size: 1.2rem;
+    margin-left: 2%;
 }
