--- a/src/renderer/src/Components/Pages/JungleToolPage/SelectChamp/selectchamp.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/SelectChamp/selectchamp.css
@@ -51,7 +51,7 @@
 }
 
 .options {
-    background-color: rgb(3, 58, 58);
+    background-color: #1a1a1f;
     position: absolute;
     width: 100%;
     max-height: 400%;
@@ -86,6 +86,7 @@
     border-right: 1px solid white;
     height: 3rem;
     background-color: #1a1a1f;
+    margin-top: 0;
 }
 
 .optli:hover {
