--- a/src/renderer/src/Components/Pages/JungleToolPage/ResetButton/resetbutton.css
+++ b/src/renderer/src/Components/Pages/JungleToolPage/ResetButton/resetbutton.css
@@ -1,22 +1,21 @@
 .reset {
     position: absolute;
-    right: 2.5%;
-    bottom: 2.5% ;
-    background-color: rgba(201, 137, 137, 0.75);
-    width: 8%;
-    height: 8%;
-    border-radius: 50%;
-    border: none;
-    z-index: 5000;
-    background-image: url('../../../../assets/delete-icon.png');
-    background-size: 70%;
-    background-position: center;
-    background-repeat: no-repeat;
-    max-width: 100%;
-    max-height: 100%;
-    transition: background-color 0.2s ease-in-out/*, box-shadow 1s ease-in-out*/;
-    box-shadow: 0px 0px 8px 5px #276eb1a4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 3%;
+    right: 4%;
+    width: 6%;
+    height: 6%;
+    background-color: rgba(161, 41, 41, 0.438);
+    border: 0.1px solid white;
+    font-weight: bold;
     cursor: pointer;
+    color: white;
+    text-align: center;
+    font-size: 1.1rem;
+    padding-top: 0.1rem;
+
 }
 
 .reset:hover {
