--- a/src/renderer/src/Components/Title/title.css
+++ b/src/renderer/src/Components/Title/title.css
@@ -1,3 +1,6 @@
 .title {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     text-align: center;
+    margin-bottom: 0;
+    line-height: 100%;
 }
