--- a/src/renderer/src/Components/Pages/LobbyPage/ChampionSplash/championsplash.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/ChampionSplash/championsplash.css
@@ -28,6 +28,7 @@
     text-align: center;
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    user-select: none;
 }
 
 .summonerOne, .summonerTwo {
