Missing - in if statement, css change

--- a/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
+++ b/src/renderer/src/Components/Pages/LobbyPage/lobbypage.css
@@ -94,6 +94,7 @@
 .gamestarting {
     height: 1.5rem;
     margin-top: 2%;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-size: 1.5rem;
     text-align: center;
     color: white;
